--- a/beesdoo_shift/views/task.xml
+++ b/beesdoo_shift/views/task.xml
@@ -144,9 +144,8 @@
                     <t t-name="kanban-box">
                         <div
                             t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
-                            <div class="o_dropdown_kanban dropdown"
+                            <!--FIXME <div class="o_dropdown_kanban dropdown"
                                 groups="base.group_user">
-                                <!-- Following block raises a warning -->
                                 <a class="dropdown-toggle btn"
                                     data-toggle="dropdown" href="#">
                                     <span class="fa fa-bars fa-lg" />
@@ -159,7 +158,7 @@
                                         </li>
                                     </t>
                                 </ul>
-                            </div>
+                            </div> -->
                             <div class="oe_kanban_content">
                                 <strong>
                                     <field name="name" />
